# new-mosaicode

./: .pre-commit-config.yaml  =61.0  Makefile  README.md  pyproject.toml  pytest.ini  setup.py  test_ports.py
0. context/: fase-1-progresso.md  plano-migracao-python-moderno.md  relatorio-analise.md  resultados-analise.json
launcher/: mosaicode
mosaicode/: exceptions.py  system.py
mosaicode-javascript-webaudio/examples/: analyser-example.mscd
mosaicode-modern/: pyvenv.cfg
mosaicode/GUI/: about.py  block.py  blockmenu.py  blocknotebook.py  blockstreeview.py  buttonbar.py  codewindow.py  comment.py  confirmdialog.py  connector.py  diagram.py  diagrammenu.py  enhanced_save_dialog.py  extensionimportdialog.py  fieldtypes.py  mainwindow.py  menu.py  opendialog.py  preferencewindow.py  propertybox.py  savedialog.py  searchbar.py  selectcodetemplate.py  status.py  toolbar.py  treeview.py
mosaicode/GUI/fields/: charfield.py  checkfield.py  codefield.py  colorfield.py  combofield.py  commentfield.py  field.py  floatfield.py  intfield.py  (+4 more)
mosaicode/config/: paths.json  preferences.json  system.json
mosaicode/control/: __init__.py  blockcontrol.py  codegenerator.py  codetemplatecontrol.py  diagramcontrol.py  maincontrol.py  portcontrol.py
mosaicode/model/: authormodel.py  blockmodel.py  codetemplate.py  commentmodel.py  connectionmodel.py  diagrammodel.py  port.py  preferences.py
mosaicode/persistence/: blockpersistence.py  codetemplatepersistence.py  diagrampersistence.py  persistence.py  portpersistence.py  preferencespersistence.py
mosaicode/utils/: FileUtils.py  __init__.py  config_loader.py  logger.py  pydantic_schemas.py
scripts/: validate_installation.py
templates/blocks/: defaults.json
templates/ports/: defaults.json
tests/: conftest.py  test_base.py  test_fileutils.py  test_fileutils_pure.py  test_logger.py  test_logger_pure.py  test_pydantic_schemas.py  test_pydantic_schemas_pure.py  test_system.py  test_system_pure.py
tests/GUI/: test_about.py  test_block.py  test_blockmenu.py  test_blocknotebook.py  test_blockstreeview.py  test_buttonbar.py  test_codewindow.py  test_comment.py  test_confirmdialog.py  test_connector.py  test_diagram.py  test_diagrammenu.py  test_mainwindow.py  test_menu.py  test_messagedialog.py  test_opendialog.py  test_preferencewindow.py  test_propertybox.py  test_savedialog.py  test_searchbar.py  test_selectcodetemplate.py  test_status.py  test_toolbar.py  test_treeview.py  test_workarea.py
tests/control/: test_blockcontrol.py  test_blockcontrol_pure.py  test_codegenerator.py  test_codegenerator_pure.py  test_codetemplatecontrol.py  test_diagramcontrol.py  test_maincontrol.py  test_portcontrol.py
tests/model/: test_authormodel.py  test_blockmodel.py  test_blockmodel_pure.py  test_codetemplate.py  test_commentmodel.py  test_connectionmodel.py  test_diagrammodel.py  test_port.py  test_preferences.py
tests/persistence/: test_blockpersistence.py  test_codetemplatepersistence.py  test_diagrampersistence.py  test_persistence.py  test_portpersistence.py  test_preferencespersistence.py
(+44 files in other folders)
