[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mosaicode"
version = "1.0.4.dev1"
description = "Automatic Programming Tool"
authors = [
    {name = "ALICE: Arts Lab in Interfaces, Computers, and Else", email = "mosaicode-dev@googlegroups.com"}
]
license = {text = "GNU GPL3"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: GNU General Public License (GPL)",
    "Natural Language :: English",
    "Operating System :: GNU/Linux",
    "Programming Language :: Python 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Digital Art :: VPL",
]
dependencies = [
    "pycairo>=1.20.0",
    "PyGObject>=3.40.0",
    "GooCalendar",
    "pgi",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.16.0",
    "black>=25.0.0",
    "flake8>=7.0.0",
    "pytest>=8.0.0",
    "pre-commit>=4.0.0",
    "pydantic>=2.0.0",
    "aiofiles>=23.0.0",
    "typing-extensions>=4.0.0",
]

[project.urls]
Homepage = "https://alice.dcomp.ufsj.edu.br/mosaicode/"
Repository = "https://github.com/alice-dcomp-ufsj/mosaicode"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "gi.*",
    "cairo.*",
    "pgi.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["mosaicode"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "mosaicode-modern",
] 